contrast issue was on the buttons, fixed

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -170,7 +170,7 @@
       text-decoration: none;
       border: none;
       border-radius: 10px;
-      background-color: #1dd3b0;
+      background-color: green;
       color: whitesmoke;
       @media screen and (min-width: 1568px) {
         font-size: 1.5rem;
@@ -281,7 +281,7 @@
         text-decoration: none;
         border: none;
         border-radius: 10px;
-        background-color: #1dd3b0;
+        background-color: green;
         color: whitesmoke;
         @media screen and (min-width: 1568px) {
           font-size: 1.5rem;
@@ -338,7 +338,7 @@
       text-decoration: none;
       border: none;
       border-radius: 10px;
-      background-color: #1dd3b0;
+      background-color: green;
       color: whitesmoke;
       @media screen and (min-width: 1568px) {
         font-size: 1.5rem;
