--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -24,7 +24,7 @@
         cursor: pointer;
         height: 3rem;
         font-family: Asap, sans-serif;
-        background-color: #1dd3b0;
+        background-color: green;
         color: whitesmoke;
         font-family: Asap, sans-serif;
       }
